# openssl-aes-gcm

./: CMakeLists.txt  README.md  build.sh  gcm.hpp  main.cpp  openssl-aes-gcm.hpp  test-gcm.cpp  thpool.c
misc/: openssl-aes-gcm
src/: gcm.cpp
tools/: build.sh  run-example.sh
